nav buttons not displayed on smaller monitors, corrected boxes sizes

--- a/rwd-projekt2.css
+++ b/rwd-projekt2.css
@@ -49,6 +49,12 @@ button {
   background-color: rgba(0, 0, 0, 0);
   color: white;
 }
+.contact-but,
+.we-but,
+.offer-but {
+  display: none;
+}
+
 .new-anchor {
   text-decoration: none;
   color: white;
@@ -57,6 +63,12 @@ button {
 @media screen and (min-width: 960px) {
   .nav-buttons {
     padding: 0px 20px;
+  }
+
+  .contact-but,
+  .we-but,
+  .offer-but {
+    display: inline;
   }
 
   :hover.contact-but {
@@ -197,8 +209,8 @@ img {
 }
 
 .box {
-  width: 420px;
-  height: 420px;
+  width: 180px;
+  height: 180px;
   background-color: #f1f1f1;
   color: black;
   display: flex;
@@ -220,10 +232,6 @@ img {
 @media screen and (min-width: 960px) {
   .offer {
     padding: 100px;
-  }
-  .box {
-    width: 180px;
-    height: 180px;
   }
 
   :hover.box {
